--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,7 @@
         // If this is omitted, default search path (<nixpkgs>) will be used.
         "nixos": { // This name "nixos" could be arbitrary.
           // The expression to eval, interpret it as option declarations.
-          "expr": "(builtins.getFlake \"/home/zerozawa/nixos\").packages.x86_64-linux.nixosConfigurations.nixserver.options"
+          "expr": "(builtins.getFlake \"/home/zerozawa/nixos\").packages.x86_64-linux.nixosConfigurations.zawanix.options"
         },
       },
     }
