--- a/home/zerozawa/winapps/winapps.conf
+++ b/home/zerozawa/winapps/winapps.conf
@@ -27,7 +27,7 @@ RDP_DOMAIN=""
 # - 'docker': '127.0.0.1'
 # - 'podman': '127.0.0.1'
 # - 'libvirt': '' (BLANK)
-RDP_IP="127.0.0.1"
+RDP_IP=""
 
 # [WINAPPS BACKEND]
 # DEFAULT VALUE: 'docker'
@@ -36,7 +36,7 @@ RDP_IP="127.0.0.1"
 # - 'podman'
 # - 'libvirt'
 # - 'manual'
-WAFLAVOR="docker"
+WAFLAVOR="libvirt"
 
 # [DISPLAY SCALING FACTOR]
 # NOTES:
@@ -82,7 +82,7 @@ DEBUG="true"
 # VALID VALUES:
 # - 'on'
 # - 'off'
-AUTOPAUSE="off"
+AUTOPAUSE="on"
 
 # [AUTOMATICALLY PAUSE WINDOWS TIMEOUT]
 # NOTES:
