--- a/home/zerozawa/winapps/winapps.conf
+++ b/home/zerozawa/winapps/winapps.conf
@@ -63,7 +63,7 @@ RDP_FLAGS="/cert:tofu /sound /microphone"
 # VALID VALUES:
 # - 'true'
 # - 'false'
-MULTIMON="false"
+MULTIMON="true"
 
 # [DEBUG WINAPPS]
 # NOTES:
@@ -82,7 +82,7 @@ DEBUG="true"
 # VALID VALUES:
 # - 'on'
 # - 'off'
-AUTOPAUSE="on"
+AUTOPAUSE="off"
 
 # [AUTOMATICALLY PAUSE WINDOWS TIMEOUT]
 # NOTES:
