--- a/home/zerozawa/winapps/winapps.conf
+++ b/home/zerozawa/winapps/winapps.conf
@@ -27,7 +27,7 @@ RDP_DOMAIN=""
 # - 'docker': '127.0.0.1'
 # - 'podman': '127.0.0.1'
 # - 'libvirt': '' (BLANK)
-RDP_IP=""
+RDP_IP="127.0.0.1"
 
 # [WINAPPS BACKEND]
 # DEFAULT VALUE: 'docker'
@@ -36,7 +36,7 @@ RDP_IP=""
 # - 'podman'
 # - 'libvirt'
 # - 'manual'
-WAFLAVOR="libvirt"
+WAFLAVOR="manual"
 
 # [DISPLAY SCALING FACTOR]
 # NOTES:
