feat: kitty fonts

--- a/profile/kitty.conf
+++ b/profile/kitty.conf
@@ -20,7 +20,7 @@
 #: <https://sw.kovidgoyal.net/kitty/kittens/choose-fonts/#font-spec-
 #: syntax>.
 
-font_size 14.0
+font_size 12.0
 
 #: Font size (in pts).
 
@@ -42,7 +42,7 @@ font_size 14.0
 #: to get BIDI support, because it will force kitty to always treat
 #: the text as LTR, which FriBidi expects for terminals.
 
-# symbol_map
+# symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
 
 #: E.g. symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
 
@@ -70,7 +70,7 @@ font_size 14.0
 
 #:     narrow_symbols codepoints [optionally the number of cells]
 
-# disable_ligatures never
+disable_ligatures never
 
 #: Choose how you want to handle multi-character ligatures. The
 #: default is to always render them. You can tell kitty to not render
@@ -362,7 +362,7 @@ cursor_trail_decay 0.1 0.4
 #: trail. Adjust these values to control how quickly the cursor trail
 #: fades away.
 
-# cursor_trail_start_threshold 2
+cursor_trail_start_threshold 2
 
 #: Set the distance threshold for starting the cursor trail. This
 #: option accepts a positive integer value that represents the minimum
@@ -498,12 +498,12 @@ detect_urls yes
 #: specified using backslash escapes, to specify a backslash use a
 #: double backslash.
 
-# show_hyperlink_targets no
+show_hyperlink_targets yes
 
 #: When the mouse hovers over a terminal hyperlink, show the actual
 #: URL that will be activated when the hyperlink is clicked.
 
-# underline_hyperlinks hover
+underline_hyperlinks hover
 
 #: Control how hyperlinks are underlined. They can either be
 #: underlined on mouse hover, always (i.e. permanently underlined) or
@@ -515,7 +515,7 @@ detect_urls yes
 #: to/from always will only affect text subsequently received by
 #: kitty.
 
-# copy_on_select no
+copy_on_select no
 
 #: Copy to clipboard or a private buffer on select. With this set to
 #: clipboard, selecting text with the mouse will cause the text to be
@@ -701,27 +701,27 @@ paste_actions quote-urls-at-prompt,confirm
 
 #: Paste from the primary selection
 
-# mouse_map middle release ungrabbed paste_from_selection
+mouse_map middle release ungrabbed paste_from_selection
 
 #: Start selecting text
 
-# mouse_map left press ungrabbed mouse_selection normal
+mouse_map left press ungrabbed mouse_selection normal
 
 #: Start selecting text in a rectangle
 
-# mouse_map ctrl+alt+left press ungrabbed mouse_selection rectangle
+mouse_map ctrl+alt+left press ungrabbed mouse_selection rectangle
 
 #: Select a word
 
-# mouse_map left doublepress ungrabbed mouse_selection word
+mouse_map left doublepress ungrabbed mouse_selection word
 
 #: Select a line
 
-# mouse_map left triplepress ungrabbed mouse_selection line
+mouse_map left triplepress ungrabbed mouse_selection line
 
 #: Select line from point
 
-# mouse_map ctrl+alt+left triplepress ungrabbed mouse_selection line_from_point
+mouse_map ctrl+alt+left triplepress ungrabbed mouse_selection line_from_point
 
 #::  Select from the clicked point to the end of the line. If you
 #::  would like to select the word at the point and then extend to the
@@ -730,35 +730,35 @@ paste_actions quote-urls-at-prompt,confirm
 
 #: Extend the current selection
 
-# mouse_map right press ungrabbed mouse_selection extend
+mouse_map right press ungrabbed mouse_selection extend
 
 #::  If you want only the end of the selection to be moved instead of
 #::  the nearest boundary, use move-end instead of extend.
 
 #: Paste from the primary selection even when grabbed
 
-# mouse_map shift+middle release ungrabbed,grabbed paste_selection
-# mouse_map shift+middle press grabbed discard_event
+mouse_map shift+middle release ungrabbed,grabbed paste_selection
+mouse_map shift+middle press grabbed discard_event
 
 #: Start selecting text even when grabbed
 
-# mouse_map shift+left press ungrabbed,grabbed mouse_selection normal
+mouse_map shift+left press ungrabbed,grabbed mouse_selection normal
 
 #: Start selecting text in a rectangle even when grabbed
 
-# mouse_map ctrl+shift+alt+left press ungrabbed,grabbed mouse_selection rectangle
+mouse_map ctrl+shift+alt+left press ungrabbed,grabbed mouse_selection rectangle
 
 #: Select a word even when grabbed
 
-# mouse_map shift+left doublepress ungrabbed,grabbed mouse_selection word
+mouse_map shift+left doublepress ungrabbed,grabbed mouse_selection word
 
 #: Select a line even when grabbed
 
-# mouse_map shift+left triplepress ungrabbed,grabbed mouse_selection line
+mouse_map shift+left triplepress ungrabbed,grabbed mouse_selection line
 
 #: Select line from point even when grabbed
 
-# mouse_map ctrl+shift+alt+left triplepress ungrabbed,grabbed mouse_selection line_from_point
+mouse_map ctrl+shift+alt+left triplepress ungrabbed,grabbed mouse_selection line_from_point
 
 #::  Select from the clicked point to the end of the line even when
 #::  grabbed. If you would like to select the word at the point and
@@ -767,11 +767,11 @@ paste_actions quote-urls-at-prompt,confirm
 
 #: Extend the current selection even when grabbed
 
-# mouse_map shift+right press ungrabbed,grabbed mouse_selection extend
+mouse_map shift+right press ungrabbed,grabbed mouse_selection extend
 
 #: Show clicked command output in pager
 
-# mouse_map ctrl+shift+right press ungrabbed mouse_show_command_output
+mouse_map ctrl+shift+right press ungrabbed mouse_show_command_output
 
 #::  Requires shell integration
 #::  <https://sw.kovidgoyal.net/kitty/shell-integration/> to work.
@@ -801,7 +801,7 @@ paste_actions quote-urls-at-prompt,confirm
 #: because kitty is so fast that partial screen updates will be drawn.
 #: This setting is ignored when the input buffer is almost full.
 
-# sync_to_monitor yes
+sync_to_monitor yes
 
 #: Sync screen updates to the refresh rate of the monitor. This
 #: prevents screen tearing
@@ -814,7 +814,7 @@ paste_actions quote-urls-at-prompt,confirm
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell yes
 
 #: The audio bell. Useful to disable it in environments that require
 #: silence.
@@ -839,12 +839,12 @@ paste_actions quote-urls-at-prompt,confirm
 #: selection background color. If you feel that the visual bell is too
 #: bright, you can set it to a darker color.
 
-# window_alert_on_bell yes
+window_alert_on_bell yes
 
 #: Request window attention on bell. Makes the dock icon bounce on
 #: macOS or the taskbar flash on Linux.
 
-# bell_on_tab "🔔 "
+bell_on_tab "🔔 "
 
 #: Some text or a Unicode symbol to show on the tab if a window in the
 #: tab that does not have focus has a bell. If you want to use leading
@@ -974,26 +974,26 @@ paste_actions quote-urls-at-prompt,confirm
 #: left, top, top-right, left, center, right, bottom-left, bottom,
 #: bottom-right.
 
-# active_border_color #00ff00
+active_border_color #00ff00
 
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
 
-# inactive_border_color #cccccc
+inactive_border_color #cccccc
 
 #: The color for the border of inactive windows.
 
-# bell_border_color #ff5a00
+bell_border_color #ff5a00
 
 #: The color for the border of inactive windows in which a bell has
 #: occurred.
 
-# inactive_text_alpha 1.0
+inactive_text_alpha 1.0
 
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-# hide_window_decorations no
+hide_window_decorations no
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only and titlebar-and-corners can be used
@@ -1069,7 +1069,7 @@ paste_actions quote-urls-at-prompt,confirm
 #: insensitive, from the set 0-9A-Z\-=[];',./\\`. Specify your
 #: preference as a string of characters.
 
-# confirm_os_window_close -1
+confirm_os_window_close 0
 
 #: Ask for confirmation when closing an OS window or a tab with at
 #: least this number of kitty windows in it by window manager (e.g.
@@ -1267,7 +1267,7 @@ paste_actions quote-urls-at-prompt,confirm
 
 #: The foreground and background colors.
 
-# background_opacity 1.0
+background_opacity 0.8
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
